# P1-Energy-Monitoring

./: .gitignore  CMakeLists.txt  MakePlotPython.py  README.md  accessToken.json  data.txt  device.txt  dishWasher.txt  license.md  main.c  meter.json  meteringPoints.json  output.json  refreshToken.json  spotPrices.json  washingMachine.txt
libary/json-c-build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  install_manifest.txt
libary/json-c-build/Testing/Temporary/: CTestCostData.txt
libary/json-c-build/apps/: CTestTestfile.cmake  Makefile  cmake_install.cmake  json_parse
libary/json-c-build/doc/: CTestTestfile.cmake  Makefile  cmake_install.cmake
libary/json-c-build/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test1  test1Formatted  test2  test2Formatted  test4  testReplaceExisting  test_cast  test_charcase  test_compare  test_deep_copy  test_double_serializer  test_float  test_int_add  test_int_get  test_json_pointer  test_locale  test_null  test_object_iterator  test_parse  test_parse_int64  test_printbuf  test_set_serializer  test_set_value  test_strerror  test_util_file  test_visit
